add saving frame state and reusing while opening